# minima-llm

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/minima_llm/: __init__.py  backend.py  batch.py  cli.py  config.py  dspy_adapter.py  protocol.py  proxy.py
src/minima_llm/examples/: basic_usage.py  dspy_usage.py
tests/: test_llm_integration.py  test_minima_llm_dspy.py  test_minima_llm_multirun.py  test_minima_llm_resilience.py  test_parasail_batch.py  test_retries.py  test_retry_temperature.py
